v3.0.0/_sources/plugins/pnp_global_settings_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.pnp_global_settings_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.pnp_global_settings_info -- Information module for Pnp Global Settings
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.pnp_global_settings_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Pnp Global Settings.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options


.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Pnp Global Settings reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Pnp Global Settings object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Pnp Global Settings
      cisco.dnac.pnp_global_settings_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;savaMappingList&quot;: [
        {
          &quot;syncStatus&quot;: &quot;string&quot;,
          &quot;syncStartTime&quot;: 0,
          &quot;syncResult&quot;: {
            &quot;syncList&quot;: [
              {
                &quot;syncType&quot;: &quot;string&quot;,
                &quot;deviceSnList&quot;: [
                  &quot;string&quot;
                ]
              }
            ],
            &quot;syncMsg&quot;: &quot;string&quot;
          },
          &quot;lastSync&quot;: 0,
          &quot;tenantId&quot;: &quot;string&quot;,
          &quot;profile&quot;: {
            &quot;port&quot;: 0,
            &quot;addressIpV4&quot;: &quot;string&quot;,
            &quot;addressFqdn&quot;: &quot;string&quot;,
            &quot;profileId&quot;: &quot;string&quot;,
            &quot;proxy&quot;: true,
            &quot;makeDefault&quot;: true,
            &quot;cert&quot;: &quot;string&quot;,
            &quot;name&quot;: &quot;string&quot;
          },
          &quot;token&quot;: &quot;string&quot;,
          &quot;expiry&quot;: 0,
          &quot;ccoUser&quot;: &quot;string&quot;,
          &quot;smartAccountId&quot;: &quot;string&quot;,
          &quot;virtualAccountId&quot;: &quot;string&quot;,
          &quot;autoSyncPeriod&quot;: 0,
          &quot;syncResultStr&quot;: &quot;string&quot;
        }
      ],
      &quot;taskTimeOuts&quot;: {
        &quot;imageDownloadTimeOut&quot;: 0,
        &quot;configTimeOut&quot;: 0,
        &quot;generalTimeOut&quot;: 0
      },
      &quot;tenantId&quot;: &quot;string&quot;,
      &quot;aaaCredentials&quot;: {
        &quot;password&quot;: &quot;string&quot;,
        &quot;username&quot;: &quot;string&quot;
      },
      &quot;defaultProfile&quot;: {
        &quot;fqdnAddresses&quot;: [
          &quot;string&quot;
        ],
        &quot;proxy&quot;: true,
        &quot;cert&quot;: &quot;string&quot;,
        &quot;ipAddresses&quot;: [
          &quot;string&quot;
        ],
        &quot;port&quot;: 0
      },
      &quot;acceptEula&quot;: true,
      &quot;id&quot;: &quot;string&quot;,
      &quot;_id&quot;: &quot;string&quot;,
      &quot;version&quot;: 0
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

